# vietnamese-license-plate-recognition

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
app/: __init__.py  main.py
app/api/: __init__.py
app/schemas/: __init__.py
configs/: dataset.yaml  detection-baseline.yaml  detection-evaluation.yaml  ocr-baseline-layout.yaml  ocr-baseline-wide.yaml  ocr-baseline.yaml  ocr-corrections.jsonl  ocr-crnn.yaml  ocr-finetune-eval-v2.yaml  ocr-finetune-eval-v3.yaml  ocr-finetune-eval.yaml  ocr-finetune-paddleocr.yaml  ocr-paddleocr-finetune-v2.yaml  ocr-paddleocr-finetune.yaml  project.yaml
data/: README.md
docs/: architecture.md  detection-training-guide.md  ocr-finetuning-guide.md  ocr-training-guide.md
docs/decisions/: 0001-dataset-audit-before-approval.md  0002-local-cpu-cloud-training.md
reports/: dataset_report.md  environment_report.md  error_analysis.md  experiment_report.md  review_summary.md
reports/detection_baseline/: results.csv
reports/detection_baseline/test/: metrics.json  operating_point.json
reports/ocr_baseline/: layout_metrics.json  metrics.json  predictions.jsonl  report.md
scripts/: analyze_detection_data.py  analyze_detection_errors.py  analyze_ocr_data.py  analyze_ocr_errors.py  benchmark_detection_onnx.py  benchmark_ocr_latency.py  check_environment.py  compare_detection_runtimes.py  compare_ocr_preprocessing.py  create_review_samples.py  download_data.py  evaluate_detection.py  evaluate_end_to_end.py  evaluate_ocr.py  evaluate_paddleocr_finetune.py  export_colab_eval_zip.py  export_colab_zip.py  export_detection_yolo.py  export_ocr_finetune_data.py  predict_end_to_end.py  predict_visualized.py  prepare_data.py  prepare_ocr_training.py  prepare_paddleocr_finetune.py  rescue_plate_ocr.py  split_data.py  track_video.py  train_detection.py  train_ocr.py  train_paddleocr_finetune.py  validate_data.py
src/vlpr/: __init__.py  config.py  environment.py  settings.py
src/vlpr/data/: __init__.py  audit.py  corrections.py  detection_eda.py  detection_parser.py  download.py  duplicates.py  hashing.py  image_validation.py  manifest.py  manifest_io.py  manifest_schema.py  manifest_sources.py  ocr_eda.py  ocr_finetune.py  ocr_layout.py  ocr_parser.py  ocr_training.py  prepare.py  receipt.py  (+5 more)
tests/unit/: test_audit.py  test_config.py  test_corrections.py  test_crnn.py  test_detection_analysis.py  test_detection_analysis_batching.py  test_detection_eda.py  test_detection_evaluation.py  test_detection_parser.py  test_detection_training.py  test_documentation.py  test_download.py  test_duplicates.py  test_hashing.py  test_image_validation.py  test_manifest.py  test_manifest_io.py  test_manifest_schema.py  test_manifest_sources.py  test_ocr_eda.py  test_ocr_evaluation.py  test_ocr_finetune.py  test_ocr_parser.py  test_ocr_training_data.py  test_paddleocr_finetune.py  test_prepare.py  test_reproducibility.py  test_review.py  test_settings.py  test_splitting.py  test_tracking.py  test_validation.py  test_yolo_export.py
(+16 files in other folders)
