[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "vietnamese-license-plate-recognition"
version = "0.1.0"
description = "End-to-end Vietnamese license plate detection and recognition"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "VLPR contributors" }]
dependencies = [
    "numpy>=1.26,<3",
    "pip-system-certs>=5.3,<6; sys_platform == 'win32'",
    "pydantic>=2.8,<3",
    "pyyaml>=6.0.2,<7",
]

[project.optional-dependencies]
data = [
    "kagglehub>=0.3.13,<1",
    "kagglesdk>=0.1.14,<0.1.24",
    "pillow>=10.4,<13",
]
detection = [
    "torch>=2.6,<3",
    "ultralytics>=8.3,<9",
]
ocr = [
    "paddleocr>=3.7,<4",
    "paddlepaddle>=3.3,<4",
]
tracking = [
    "wandb>=0.28,<1",
]
api = [
    "fastapi>=0.115,<1",
    "jinja2>=3.1,<4",
    "python-multipart>=0.0.20,<1",
    "uvicorn[standard]>=0.34,<1",
]
export = [
    "onnx>=1.17,<2",
    "onnxruntime>=1.20,<2",
]
dev = [
    "mypy>=1.11,<2",
    "pre-commit>=3.8,<5",
    "pytest>=8.3,<10",
    "pytest-cov>=5,<8",
    "ruff>=0.6,<1",
    "types-PyYAML>=6.0.12,<7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vlpr"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["app", "scripts", "src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
files = ["app", "scripts", "src", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["kagglehub", "wandb"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["vlpr"]
